--- a/public/index.html
+++ b/public/index.html
@@ -51,5 +51,7 @@
 
     <script src="js/progress.js" ></script>
     
+    <script type="text/javascript" src="https://js.squareupsandbox.com/v2/paymentform"></script>
+    
   </body>
 </html>
